Modify z-index to correct strange behavior where a drop-down menu was behind some text. Make the create idea button take the user to the create idea page instead of showing the 'you must login'-dialog.

--- a/trunk/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_select-to-dropdown.scss
+++ b/trunk/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_select-to-dropdown.scss
@@ -3,7 +3,7 @@
 .select-to-dropdown-wrap {
     display: block;
     position: relative;
-    z-index: 600;
+    z-index: 9;
 
   .select-to-dropdown-trigger {
       background: transparent url(../images/theme/icons/dropdown.png) right center no-repeat;
@@ -25,7 +25,7 @@
       position: absolute;
       top: 19px;
       width: 200px;
-      z-index: 598;
+      z-index: 498;
 
       &.select-to-dropdown-list-active {
         display: block;
